# PlotApp-C-rewriten-

./: .gitignore  CHANGED_FILES.md  CHANGED_FILES.txt  CHANGED_FILES_EXTRA.txt  CMakeLists.txt  EXTRA_FIX_REPORT_RU.md  FIX_BUG_V5_REPORT.md  FIX_BUG_V6_REPORT.md  FIX_BUG_V7_REPORT.md  FIX_BUG_V8_REPORT.md  FIX_BUILD_NOTE_RU.md  FIX_REPORT_RU.md  ITERATION_REPORT.md  NOT_READY.md  README.md  README.txt  TEST_LOG_RU.txt  TEST_RESULTS.txt  VERSION.txt  WHAT_FAILED.txt  install_app.sh  uninstall_app.sh  update_app.sh
cmake/: FindMiniZip.cmake
docs/: ARCHITECTURE.md  CHANGELOG_RU.md  CLI_COMMANDS.md  COMMAND_HELP.txt  INSTALL_FEDORA_43.md  MANAGED_INSTALL.md  PLUGIN_API.md  PLUGIN_AUTHORING_RU.md  PROCESS.md  REQUEST_TRACEABILITY.md  SPECIFICATION.md  STATUS_AND_GAPS.md  TESTING.md  USER_GUIDE.md  gui_configure_log.txt
examples/: sample_book.xlsx  sample_noise.txt  sample_points.csv
include/plotapp/: BuildInfo.h  CommandDispatcher.h  CurveMath.h  FormulaEvaluator.h  Importer.h  LayerSampler.h  ManagedInstall.h  PluginApi.h  PluginManager.h  Project.h  ProjectController.h  ProjectSerializer.h  SvgRenderer.h  TextUtil.h
packaging/linux/: plotapp.desktop.in
plugins/common/: plugin_helpers.h
plugins/error_bars/: error_bars_plugin.cpp
plugins/linear_fit/: linear_fit_plugin.cpp
plugins/local_extrema/: local_extrema_plugin.cpp
plugins/moving_average/: moving_average_plugin.cpp
plugins/newton_deg2/: newton_deg2_plugin.cpp
plugins/newton_deg4/: newton_deg4_plugin.cpp
plugins/newton_deg5/: newton_deg5_plugin.cpp
plugins/newton_polynomial/: newton_polynomial_plugin.cpp
plugins/smooth_curve/: smooth_curve_plugin.cpp
scripts/: build_fedora.sh  run_cli_demo.sh
src/: main.cpp
src/app/: main.cpp
src/cli/: main.cpp
src/commands/: CommandDispatcher.cpp
src/core/: BuildInfo.cpp  DataManager.cpp  DataManager.h  DataManger.h  FormulaEvaluator.cpp  LayerSampler.cpp  ManagedInstall.cpp  PlotWidget.cpp  PlotWidget.h  PluginManager.cpp  Project.cpp  ProjectController.cpp  TextUtil.cpp
src/features/: Feature.h
src/importers/: DelimitedTextImporter.cpp  XlsxImporter.cpp
src/render/: SvgRenderer.cpp
src/serialization/: ProjectSerializer.cpp
src/ui/: DialogUtil.h  ExportDialog.cpp  ExportDialog.h  FormulaLayerDialog.cpp  FormulaLayerDialog.h  ImportDialog.cpp  ImportDialog.h  LayerPropertiesDialog.cpp  LayerPropertiesDialog.h  MainWindow.cpp  MainWindow.h  PlotCanvasWidget.cpp  PlotCanvasWidget.h  PluginRunDialog.cpp  PluginRunDialog.h  PointsEditorDialog.cpp  PointsEditorDialog.h  SettingsDialog.cpp  SettingsDialog.h  TextEntryDialog.cpp  TextEntryDialog.h
tests/: gui_static_checks.sh  tests_main.cpp
tests/data/: relationship_reordered_shared_strings.xlsx
tools/: desktop_manager.sh
